<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/team_a"
        android:textColor="@color/colorGrey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textScoreA"
        app:layout_constraintStart_toStartOf="@+id/textScoreA"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/team_b"
        android:textColorLink="@color/colorGrey"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textScoreB"
        app:layout_constraintStart_toStartOf="@+id/textScoreB"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textScoreA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nine"
        android:textColor="@android:color/black"
        android:textSize="56sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonTigaPointA"
        app:layout_constraintStart_toStartOf="@+id/buttonTigaPointA"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textScoreB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sixteen"
        android:textColor="@android:color/black"
        android:textSize="56sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonTigaPointB"
        app:layout_constraintStart_toStartOf="@+id/buttonTigaPointB"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonTigaPointA"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:layout_marginStart="@dimen/dimensi"
        android:layout_marginLeft="@dimen/dimensi"
        android:layout_marginTop="@dimen/dimensi"
        android:layout_marginEnd="@dimen/dimensi"
        android:layout_marginRight="@dimen/dimensi"
        android:background="@color/colorPrimary"
        android:text="@string/_3_point"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textScoreA" />

    <Button
        android:id="@+id/buttonTigaPointB"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorPrimary"
        android:text="@string/_3_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textScoreB" />

    <Button
        android:id="@+id/buttonDuaPointA"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorPrimary"
        android:text="@string/_2_point"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTigaPointA" />

    <Button
        android:id="@+id/buttonDuaPointB"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorPrimary"
        android:text="@string/_2_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/buttonTigaPointB" />

    <Button
        android:id="@+id/buttonFreeThrowA"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorPrimary"
        android:text="@string/free_throw"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDuaPointA" />

    <Button
        android:id="@+id/buttonFreeThrowB"
        android:layout_width="140dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorPrimary"
        android:text="@string/free_throw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/buttonDuaPointB" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorPrimary"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        tools:ignore="MissingConstraints" />

    <view
        class="android.support.v4.view.ViewPager"
        id="@+id/view3"
        android:layout_width="1dp"
        android:layout_height="300dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorGrey"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>